Fancy new color variables

--- a/assets/less/bootstrap/variables.less
+++ b/assets/less/bootstrap/variables.less
@@ -13,11 +13,11 @@
 @gray-light:             lighten(#000, 46.7%); // #777
 @gray-lighter:           lighten(#000, 93.5%); // #eee
 
-@brand-primary:         #428bca;
-@brand-success:         #5cb85c;
-@brand-info:            #5bc0de;
-@brand-warning:         #f0ad4e;
-@brand-danger:          #d9534f;
+@brand-primary:         #372180;
+@brand-success:         #5aa524;
+@brand-info:            #33916e;
+@brand-warning:         #d7bc40;
+@brand-danger:          #a92549;
 
 
 //== Scaffolding
