--- a/assets/less/bootstrap/variables.less
+++ b/assets/less/bootstrap/variables.less
@@ -13,7 +13,7 @@
 @gray-light:             lighten(#000, 46.7%); // #777
 @gray-lighter:           lighten(#000, 93.5%); // #eee
 
-@brand-primary:         #372180;
+@brand-primary:         #1f3d7c;
 @brand-success:         #5aa524;
 @brand-info:            #33916e;
 @brand-warning:         #d7bc40;
