Add first page of the wizard

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -1,7 +1,5 @@
 @import 'bootstrap/bootstrap.less';
 @import 'bootstrap-social.less';
+@import 'animations.less';
+@import 'devices.less';
 
-.faded {
-  opacity: 0.3;
-  filter: alpha(opacity=30);
-}
