Move lib files into libs

--- a/assets/less/devices.less
+++ b/assets/less/devices.less
@@ -1,10 +1,12 @@
 .device-thumbnail {
-  .animated-popout;
+  a div {
+    .animated-popout;
 
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center center;
-  height: 200px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center center;
+    height: 200px;
+  }
 }
 
 .faded {
