--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -1,5 +1,6 @@
-@import 'bootstrap/bootstrap.less';
-@import 'bootstrap-social.less';
+@import 'lib/bootstrap/bootstrap.less';
+@import 'lib/bootstrap-social.less';
+@import 'lib/animate.less';
 @import 'animations.less';
 @import 'devices.less';
 
