Nodes in the Add Node wizard go places

--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -2,5 +2,5 @@
 @import 'lib/bootstrap-social.less';
 @import 'lib/animate.less';
 @import 'animations.less';
-@import 'devices.less';
+@import 'nodes.less';
 
