add add-*.html and add-*.js files

--- a/assets/less/animations.less
+++ b/assets/less/animations.less
@@ -1,6 +1,6 @@
-.animated-popout(@time: 0.2s) {
+.animated-popout {
   .pop-out;
-  .transition(@time);
+  .transition;
 }
 
 .pop-out(@startScale:0.9, @endScale:1.0) {
