--- a/assets/less/nodes.less
+++ b/assets/less/nodes.less
@@ -1,3 +1,20 @@
+.ghost-thumbnail {
+  .node-thumbnail;
+
+  border-style: dashed;
+  border-width: 5px;
+  border-color: @gray-light;
+
+  -webkit-border-radius: 45px;
+  -moz-border-radius: 45px;
+  border-radius: 45px;
+
+  div {
+    margin-top: 75px;
+    color: @gray-light;
+  }
+}
+
 .node-thumbnail {
   background-repeat: no-repeat;
   background-size: contain;
@@ -5,7 +22,25 @@
   height: 200px;
 }
 
+.spiral-thumbnail {
+  .node-thumbnail;
+  background-image: url('/assets/images/300x300spiral.png');
+}
+
 .faded {
   opacity: 0.3;
   filter: alpha(opacity=30);
+}
+
+/* centered columns styles */
+.row-centered {
+    text-align:center;
+}
+.col-centered {
+    display:inline-block;
+    float:none;
+    /* reset the text-align */
+    text-align:left;
+    /* inline-block space fix */
+    margin-right:-4px;
 }
