Changing Devices page to generic node page.

--- a/assets/less/nodes.less
+++ b/assets/less/nodes.less
@@ -36,6 +36,12 @@
 .row-centered {
     text-align:center;
 }
+
+.node-name{
+  .row-centered;
+  color: @text-muted;
+}
+
 .col-centered {
     display:inline-block;
     float:none;
