Add simpleauth, fix noauth

--- a/assets/less/nodes.less
+++ b/assets/less/nodes.less
@@ -20,6 +20,11 @@
   background-size: contain;
   background-position: center center;
   height: 200px;
+
+}
+
+.muted-link {
+  color: @gray;
 }
 
 .spiral-thumbnail {
