--- a/public/assets/design/style.css
+++ b/public/assets/design/style.css
@@ -119,7 +119,7 @@ a.brand img {
     -moz-box-sizing: border-box;
 }
 .palette-spinner {
-    padding-top: 40px;
+    margin-top: 40px;
 }
 #palette-search {
     position: absolute;
