fixed style issues with admin page (flatty)

--- a/assets/less/lib/bootstrap/variables.less
+++ b/assets/less/lib/bootstrap/variables.less
@@ -476,11 +476,11 @@
 //## Define colors for form feedback states and, by default, alerts.
 
 @state-success-text:             #3c763d;
-@state-success-bg:               #dff0d8;
+@state-success-bg:               lighten(@brand-success, 10%);
 @state-success-border:           darken(spin(@state-success-bg, -10), 5%);
 
 @state-info-text:                #31708f;
-@state-info-bg:                  #d9edf7;
+@state-info-bg:                  lighten(@brand-info, 10%);
 @state-info-border:              darken(spin(@state-info-bg, -10), 7%);
 
 @state-warning-text:             #8a6d3b;
@@ -488,7 +488,7 @@
 @state-warning-border:           darken(spin(@state-warning-bg, -10), 5%);
 
 @state-danger-text:              #a94442;
-@state-danger-bg:                #f2dede;
+@state-danger-bg:                lighten(@brand-danger, 10%);
 @state-danger-border:            darken(spin(@state-danger-bg, -10), 5%);
 
 
@@ -694,8 +694,8 @@
 @panel-default-heading-bg:    #f5f5f5;
 
 @panel-primary-text:          #fff;
-@panel-primary-border:        @brand-primary;
-@panel-primary-heading-bg:    @brand-primary;
+@panel-primary-border:        lighten(@brand-primary, 10%);
+@panel-primary-heading-bg:    lighten(@brand-primary, 10%);
 
 @panel-success-text:          @state-success-text;
 @panel-success-border:        @state-success-border;
