--- a/assets/less/lib/bootstrap/panels.less
+++ b/assets/less/lib/bootstrap/panels.less
@@ -228,6 +228,9 @@
 }
 .panel-primary {
   .panel-variant(@panel-primary-border; @panel-primary-text; @panel-primary-heading-bg; @panel-primary-border);
+  a {
+    color: white;
+  }
 }
 .panel-success {
   .panel-variant(@panel-success-border; @panel-success-text; @panel-success-heading-bg; @panel-success-border);
