--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -13,6 +13,17 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  **/
+.node-red-container {
+  margin-top: 56px;
+  iframe {
+    margin-top: 15px;
+  }
+  .node-red-spinner {
+    margin-top:8px;
+  }
+}
+
+
   #dropTarget {
     position: absolute;
     top: 0;
