--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -64,11 +64,14 @@
     }
   }
   .workspace {
+    display: flex;
     flex: 1;
+    flex-direction: column;
   }
   .red-tabs-container {
     display: flex;
     flex-direction: row;
+    height: 28px;
   }
   .red-tabs {
     display: flex;
@@ -102,18 +105,16 @@
     }
   }
 
-  ul.red-ui-tabs li.active a.red-ui-tab-close {
+  ul.red-tabs li.active a.red-ui-tab-close {
     background: rgba(255, 255, 255, 0.8);
   }
-  ul.red-ui-tabs li.active a.red-ui-tab-label:hover {
 
-  }
 
-  ul.red-ui-tabs li.red-ui-add-tab a {
+  ul.red-tabs li.red-ui-add-tab a {
     padding: 2px 4px;
   }
 
-  ul.red-ui-tabs {
+  ul.red-tabs {
     list-style-type: none;
     padding: 5px 2px 0px 5px;
     margin: 0;
@@ -121,7 +122,7 @@
     border-bottom: 1px solid #999;
   }
 
-  ul.red-ui-tabs li {
+  ul.red-tabs li {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
     //    display: inline-block;
@@ -139,16 +140,16 @@
     white-space: nowrap;
   }
 
-  ul.red-ui-tabs li a.red-ui-tab-label {
+  ul.red-tabs li a.red-ui-tab-label {
     display: block;
     padding: 3px 16px;
     color: #666;
   }
-  ul.red-ui-tabs li {
+  ul.red-tabs li {
     position: relative;
   }
 
-  ul.red-ui-tabs li a.red-ui-tab-close {
+  ul.red-tabs li a.red-ui-tab-close {
     background: rgba(227, 227, 227, 0.8);
     //    position: absolute;
     right: 2px;
