Remove absolute positioning on debugger

--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -27,6 +27,10 @@
 }
 
 .design2.designer-container {
+  #debug-content {
+    position: inherit;
+  }
+
   display: flex;
   flex-direction: column;
   .page-header {
