--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -48,7 +48,7 @@
       flex-direction: row;
       align-content: center;
       justify-content: center;
-      height: 30px;
+      min-height: 28px;
       border: 1px solid #999;
       i {
         padding: 5px;
