add space between panels

--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -361,7 +361,12 @@
     flex: 1;
     height: 80vh;
     margin: 0;
+
+    .workspace {
+      margin: 0 10px;
+    }
   }
+
 
   #sidebar {
     width: 305px;
