Hiding node red templates

--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -27,6 +27,9 @@
 }
 
 .design2.designer-container {
+  #node-red-templates{
+    display: none;
+  }
   #debug-content {
     position: inherit;
   }
