dialog boxes should work.

--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -433,8 +433,8 @@
 
   .workspace, .palette, .sidebar {
     border: 1px solid #000;
-    border: 1px solid #000;
     border-radius: 3px;
+    overflow:scroll;
   }
   #sidebar-content {
     font-size: 1.2em;
