making editor prettier

--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -82,15 +82,16 @@
   .edit-panel {
     /* sadly, this has to be non-semantic because the html in the editor is auto-generated. */
     background-color: #f3f3f3;
-    h3 {
-      .panel-header;
-    }
     .node-editor {
-      border: 1px solid #999;
-      margin: 5px;
-
+//      border: 1px solid #999;
+//      margin: 5px;
+      .well {
+        border: none;
+        background-color: inherit;;]
+      }
       .node-editor-header {
         text-align: center;
+        margin: 0 10px;
         .text-muted;
       }
 
