--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -83,15 +83,13 @@
     /* sadly, this has to be non-semantic because the html in the editor is auto-generated. */
     background-color: #f3f3f3;
     .node-editor {
-//      border: 1px solid #999;
-//      margin: 5px;
       .well {
         border: none;
-        background-color: inherit;;]
+        background-color: inherit;
       }
       .node-editor-header {
         text-align: center;
-        margin: 0 10px;
+        margin: 10px;
         .text-muted;
       }
 
