--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -95,7 +95,7 @@
 
       display: flex;
       flex-direction: column;
-      div[data-jsoneditor-editor] {
+      & > div{
         display: flex;
         flex-direction: column;
         h3 {
