--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -89,8 +89,12 @@
       }
       .node-editor-header {
         text-align: center;
-        margin: 10px;
+        margin: 20px 10px 10px;
         .text-muted;
+        input {
+          font-size:24px;
+          height:auto;
+        }
       }
 
       display: flex;
