--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -99,7 +99,7 @@
 
       display: flex;
       flex-direction: column;
-      & > div{
+      .schema-editor > div{
         display: flex;
         flex-direction: column;
         h3 {
