--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -44,7 +44,7 @@
     flex: 1;
   }
   .palette {
-    width: 150px;
+    min-width: 150px;
     display: flex;
     flex-direction: column;
     background: #f3f3f3;
