--- a/assets/less/design.less
+++ b/assets/less/design.less
@@ -28,6 +28,16 @@
   -webkit-user-drag: element;
 }
 
+.center-children {
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+}
+
+
+@red-tab-hover: #efefef;
+
 .node-red-container {
   margin-top: 56px;
   iframe {
@@ -83,12 +93,10 @@
     }
   }
   .workspace-container {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-
     .chart-zoom-controls {
       text-align: right;
+      position:absolute;
+      right:60px;
     }
   }
   .edit-panel {
@@ -150,7 +158,7 @@
   .red-tabs-container {
     display: flex;
     flex-direction: row;
-    min-height: 28px;
+    height: 34px;
   }
   .red-tabs {
     display: flex;
@@ -162,26 +170,20 @@
     }
     li.active {
       background: #fff;
-      border-bottom: 1px solid #fff;
       color: #333;
+      height:104%;
     }
   }
   .red-add-tab {
-    width: 28px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    cursor:pointer;
+    width:33px;
     background: #e3e3e3;
+    border-bottom: 1px solid #999;
     &:hover {
-      background: rgb(227, 227, 227);
+      background: @red-tab-hover;
+      border-left: 1px solid #999;
     }
-    a {
-      display: flex;
-      flex: 1;
-      justify-content: center;
-      align-items: center;
-      border-bottom: 1px solid #999;
-    }
+    .center-children;
   }
 
   ul.red-tabs li.active a.red-ui-tab-close {
@@ -193,29 +195,31 @@
   }
 
   ul.red-tabs {
+    height:100%;
     list-style-type: none;
     padding: 5px 2px 0px 5px;
     margin: 0;
-    height: 28px;
     border-bottom: 1px solid #999;
   }
 
   ul.red-tabs li {
+    cursor:pointer;
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    //    display: inline-block;
     border-left: 1px solid #999;
     border-top: 1px solid #999;
     border-right: 1px solid #999;
-    border-bottom: 1px solid #999;
     background: #e3e3e3;
     margin: 0 5px 0 0;
-    height: 23px;
     line-height: 17px;
     max-width: 150px;
     width: 14%;
     overflow: hidden;
     white-space: nowrap;
+    .center-children;
+    &:hover {
+      background: @red-tab-hover;
+    }
   }
 
   ul.red-tabs li a.red-ui-tab-label {
@@ -835,10 +839,6 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     overflow: hidden;
-  }
-
-  #btn-workspace-add-tab:hover {
-    background: #efefef;
   }
 
   i.spinner {
