--- a/assets/less/manifest.less
+++ b/assets/less/manifest.less
@@ -4,6 +4,6 @@
 @import 'animations.less';
 @import 'nodes.less';
 @import 'device.less';
-@import 'flow-editor.less';
+@import 'flow.less';
 @import 'flex.less';
 @import 'type.less';
