--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -856,17 +856,14 @@
 
 .palette_node {
   cursor: move;
-  font-size: 13px;
-  background: #ddd;
   margin: 10px auto;
-  height: 28px;
-  border-radius: 6px;
-  border: 2px solid #999;
-  background-position: 5% 50%;
-  background-repeat: no-repeat;
-  width: 90px;
+  height: 40px;
+  width: 120px;
   background-size: contain;
   position: relative;
+  .node {
+    stroke-width:5;
+  }
 }
 
 .palette_node:hover {
