more text centering

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -861,15 +861,12 @@
   width: 120px;
   background-size: contain;
   position: relative;
-  .node {
-    stroke-width:5;
-  }
 }
 
 .palette_node:hover {
-  border-color: #ff7f0e;
-  background-color: #eee;
-
+  .node {
+    stroke: #ff7f0e;
+  }
   .palette_port {
     border-color: #999;
     background-color: #eee;
