flows render on select!

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -430,7 +430,7 @@
   /* ---------- Layout ---------- */
   .main-container {
     display: flex;
-    flex-direction: horizontal;
+    flex-direction: row;
     height: 80vh;
     margin: 0;
   }
