Display flow node editor

--- a/assets/less/flow.less
+++ b/assets/less/flow.less
@@ -122,6 +122,8 @@
     bottom: 10px;
     /* sadly, this has to be non-semantic because the html in the editor is auto-generated. */
     background-color: #f3f3f3;
+    overflow-y: scroll;
+
     .node-editor {
       overflow-x: hidden;
       .well {
